syntax = "proto3";

import "propertyType.proto";
import "google/protobuf/struct.proto";

package experience;
option go_package = "generated";


message Property{
	string name = 1;
	string key = 2;
	string type_key = 3;	
	string default_value = 4;
	string appearance_key = 5;
	string prompt_text = 6;
	string help_text = 7;
	bool localizable = 8;
	repeated Rule rules = 9;
}

message Rule{
    string type_key = 1;
    google.protobuf.Struct constraint = 2;
    string error_message = 3;
}